# skILMpy

./: .gitignore  AUTHORS  LICENSE  README.md  README.txt  ilm.py  pyproject.toml  setup.py
.binder/: apt.txt  environment.yml  postBuild  start
docs/: Makefile  README.md  conf.py  index.rst  make.bat
docs/_static/: argument_parser.rst  examples.rst  getting_started.rst  ilm_demo.rst  learners.rst  meaning_spaces.rst  observables.rst  overview.rst  resources.rst  signal_spaces.rst
ilmpy/: __init__.py  argument_parser.py  ilmpy_learners.py  learners.py  meaning_spaces.py  observables.py  signal_spaces.py
